--- a/fixacao/index.html
+++ b/fixacao/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS I - Exercício de Fixação</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
@@ -64,7 +65,7 @@
         </article>
     </main>
     <footer>
-        <p>Clique aqui e se inscreva no curso para mais recomendações do time!</p>
+        <a href="https://www.labenu.com.br/" target="_blank"> <p>Clique aqui</a> e se inscreva no curso para mais recomendações do time!</p>
     </footer>
 
 </body>
